public/stylesheets/rounded.css
/* Rounded Bubble */

div.userThings div.userComment {
	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
	margin-bottom: 10px;
	border: 3px solid #fff;
	background-color: #b7e0ff;
	width: 500px;
	margin: 5px;
}
div.userThings div.userComment blockquote {
	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
	border: 0;
	background-color: transparent;
}
div.userThings div.userComment blockquote p {
	margin: 0px 5px;
}
div.userThings cite.userComment {
	font-family: "raleway-1","raleway-2", Helvetica, Arial, sans-serif;
	background: transparent url(/images/tip-rounded.gif) no-repeat 15px 0;
	position: relative;
	margin: 0px;
	padding-left: 35px;
	padding-top: 10px;
	top: 1px;
	font-size: .7em;
}

